--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,6 +7,19 @@
   max-width: 70%;
 }
 
+
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+.header h2 {
+  text-align: center;
+}
+
 .progress-container {
   width: 100%;
   height: 8px;
