--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,7 +8,7 @@
 }
 
 
-.header {
+.headerBAR {
   position: fixed;
   top: 0;
   z-index: 1;
@@ -16,7 +16,7 @@
   background-color: #f1f1f1;
 }
 
-.header h2 {
+.headerBAR h2 {
   text-align: center;
 }
 
