--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,12 +3,17 @@
 
 @import "{{ site.theme }}";
 
+
+body {
+    padding: 10px;
+}
+
 .wrapper {
     width: 90%;
 }
 
 section {
-    width: 70%;
+    width: 60%;
 }
 
 .inner {
