--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,6 +25,14 @@
 
       </header>
       <section>
+        <nav>
+          <a href="/">Home</a> |
+          <a href="/experience/">Experience</a> |
+          <a href="/certifications/">Certificatoins</a> |
+          <a href="/skills/">Skills</a>
+          <a href="feedback/">Feedback</a>
+          <a href="/contact/">Contact</a>
+      </nav>
 
       {{ content }}
 
