--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -28,9 +28,9 @@
         <nav>
           <a href="/">Home</a> |
           <a href="/experience/">Experience</a> |
-          <a href="/certifications/">Certificatoins</a> |
-          <a href="/skills/">Skills</a>
-          <a href="feedback/">Feedback</a>
+          <a href="/certifications/">Certifications</a> |
+          <a href="/skills/">Skills</a> |
+          <a href="/feedback/">Feedback</a> |
           <a href="/contact/">Contact</a>
       </nav>
 
