--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,49 +1,20 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-GB" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="{{ page.lang | default: site.lang | default: "en-GB" }}">
 
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-    {% include head-custom.html %}
-  </head>
+  {%- include head.html -%}
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Antonio Feijao" title="Antonio Feijao" height="auto" style="border-radius:8%" />
-        {% endif %}
+    {%- include header.html -%}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
 
-      </header>
-      <section>
-        <nav>
-          <a href="/">Home</a> |
-          <a href="/experience/">Experience</a> |
-          <a href="/certifications/">Certifications</a> |
-          <a href="/skills/">Skills</a> |
-          <a href="/feedback/">Feedback</a> |
-          <a href="/contact/">Contact</a>
-      </nav>
-      <br>
-      <hr>
+    {%- include footer.html -%}
 
-
-      {{ content }}
-
-      </section>
-      <footer>
-        <p>© 2019-2022, <a href="https://AntonioFeijao.com/">Antonio Feijao</a>. All rights reserved.</p>
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
+
 </html>
