--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .wrapper {
-    width: 900px;
+    width: 90%;
     float: left;
 }
 
@@ -23,5 +23,5 @@ header {
 }
 
 section {
-    width: 560px;
+    width: 70%;
 }
