--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,6 +31,7 @@
           <a href="/certifications/">Certifications</a> |
           <a href="/skills/">Skills</a> |
           <a href="/feedback/">Feedback</a> |
+          <a href="/blog/">Blog</a> |
           <a href="/contact/">Contact</a>
       </nav>
       <br>
