--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -14,3 +14,7 @@ layout: default
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
+
+{% if page.categories %}
+  <small>categories: <em>{{ page.categories | join: "</em> - <em>" }}</em></small>
+{% endif %}
