--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -10,18 +10,18 @@ a:hover,a:focus {
 }
 
 body {
-    padding: 10px;
+    //padding: 10px;
 }
 
 .wrapper {
-    width: 90%;
-    float: left;
+    //width: 90%;
+    //float: left;
 }
 
 header {
-    width: 250px;
+    //width: 250px;
 }
 
 section {
-    width: 500px;
+    //width: 500px;
 }
