--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,6 +32,7 @@
           <a href="/skills/">Skills</a> |
           <a href="/feedback/">Feedback</a> |
           <a href="/blog/">Blog-Posts</a> |
+          <a href="/cyber-security-updates/">Cyber-Security-Updates</a> |
           <a href="/contact/">Contact</a>
       </nav>
       <br>
