--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -12,7 +12,7 @@ a:hover,a:focus {
 div.wrapper {
         //width:auto;
         width: 860px;
-        margin: 0
+        margin: 0 auto;
 }
 
 header,section,footer {
