--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -11,7 +11,7 @@ a:hover,a:focus {
 
 div.wrapper {
         //width:auto;
-        width: 860px;
+        width: auto;
         margin: 0 auto;
 }
 
