--- a/docs/assets/css/backuyp-000main.scss
+++ b/docs/assets/css/backuyp-000main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+@import "minimal-mistakes/skins/dark";
 
 code.language-plaintext.highlighter-rouge {
 	color: #ffffff;
