--- a/docs/_includes/footer/custom.html
+++ b/docs/_includes/footer/custom.html
@@ -1,3 +1,4 @@
 <!-- start custom footer snippets -->
 <p>© 2019-2022, <a href="https://AntonioFeijao.com/">Antonio Feijao</a>. All rights reserved.</p>
+<a href='https://ko-fi.com/B0B019526' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi3.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
 <!-- end custom footer snippets -->
