--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -5,6 +5,8 @@ search: false
 
 @charset "utf-8";
 
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
 
 /* dracula syntax highlighting (base16) */
 /* https://github.com/dracula/base16-dracula-scheme */
@@ -25,7 +27,28 @@ $base0d: #62d6e8;
 $base0e: #b45bcf;
 $base0f: #00f769;
 
+code.language-plaintext.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+}
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
-
+code.language-bash.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+}
