--- a/docs/ assets/css/main.scss
+++ b/docs/ assets/css/main.scss
@@ -3,9 +3,14 @@
 search: false
 ---
 
+@media (min-width: 64em)
+  html {
+    font-size: 16px;
+}
+
 @media (min-width: 48em)
   html {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 $link-color: red;
