--- a/docs/ assets/css/main.scss
+++ b/docs/ assets/css/main.scss
@@ -3,14 +3,12 @@
 search: false
 ---
 
-@media (min-width: 64em)
-  html {
-    font-size: 16px;
+@media (min-width: 64em) {
+  font-size: 16px;
 }
 
-@media (min-width: 48em)
-  html {
-    font-size: 14px;
+@media (min-width: 48em) {
+  font-size: 14px;
 }
 
 $link-color: red;
