--- a/docs/ assets/css/custom.css
+++ b/docs/ assets/css/custom.css
@@ -1,11 +1,13 @@
-@media (min-width: 64em) 
+@media (min-width: 64em) {
 .html {
   font-size: 16px;
 }
+}
 
-@media (min-width: 48em) 
+@media (min-width: 48em) {
 .html{
   font-size: 14px;
+}
 }
 
 $link-color: red;
