--- a/docs/ assets/css/custom.css
+++ b/docs/ assets/css/custom.css
@@ -1,13 +1,3 @@
-@media (min-width: 64em) {
-  .html {
-    font-size: 16px;
-  }
-}
-
-@media (min-width: 48em) {
-  .html {
+html {
     font-size: 14px;
-  }
 }
-
-$link-color: red;
