--- a/docs/ assets/css/main.scss
+++ b/docs/ assets/css/main.scss
@@ -3,9 +3,15 @@
 search: false
 ---
 
+@media (min-width: 64em)
+html {
+    font-size: 16px;
+}
+@media (min-width: 48em)
 html {
     font-size: 14px;
 }
+
 
 @charset "utf-8";
 
