--- a/docs/ assets/css/main.scss
+++ b/docs/ assets/css/main.scss
@@ -3,26 +3,9 @@
 search: false
 ---
 
+@import "custom.css";
+
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-
-
-@media(min-width: 48em) {
-  html {
-      font-size:14px
-  }
-}
-
-@media(min-width: 64em) {
-  html {
-      font-size:16px
-  }
-}
-
-@media(min-width: 80em) {
-  html {
-      font-size:16px
-  }
-}
