--- a/docs/ assets/css/custom.css
+++ b/docs/ assets/css/custom.css
@@ -1,3 +1,17 @@
-html {
-    font-size: 14px;
+@media(min-width: 48em) {
+  html {
+      font-size:14px
+  }
+}
+
+@media(min-width: 64em) {
+  html {
+      font-size:16px
+  }
+}
+
+@media(min-width: 80em) {
+  html {
+      font-size:16px
+  }
 }
