--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -3,33 +3,9 @@
 search: false
 ---
 
+@import "custom.css"
+
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-
-code.language-plaintext.highlighter-rouge {
-	color: #ffffff;
-	background-color: #0066FF;
-	padding-top: 1px;
-	padding-right: 3px;
-	padding-bottom: 1px;
-	padding-left: 3px;
-	border-radius: 5px;
-	font-size: 14px;
-	font-weight: normal;
-	font-family: "Lucida Console", Monaco, monospace;
-}
-
-code.language-bash.highlighter-rouge {
-	color: #ffffff;
-	background-color: #0066FF;
-	padding-top: 1px;
-	padding-right: 3px;
-	padding-bottom: 1px;
-	padding-left: 3px;
-	border-radius: 5px;
-	font-size: 14px;
-	font-weight: normal;
-	font-family: "Lucida Console", Monaco, monospace;
-}
