Update and rename  custom.css to  custom.scss

--- a/docs/assets/css/ custom.scss
+++ b/docs/assets/css/ custom.scss
@@ -11,7 +11,7 @@ code.language-plaintext.highlighter-rouge {
 	font-size: 14px;
 	font-weight: normal;
 	font-family: "Lucida Console", Monaco, monospace;
-}
+};
 
 code.language-bash.highlighter-rouge {
 	color: #ffffff;
@@ -24,22 +24,22 @@ code.language-bash.highlighter-rouge {
 	font-size: 14px;
 	font-weight: normal;
 	font-family: "Lucida Console", Monaco, monospace;
-}
+};
 
 @media(min-width: 48em) {
   html {
       font-size:14px
   }
-}
+};
 
 @media(min-width: 64em) {
   html {
       font-size:16px
   }
-}
+};
 
 @media(min-width: 80em) {
   html {
       font-size:16px
   }
-}
+};
