--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -3,7 +3,59 @@
 search: false
 ---
 
-@import "custom.scss";
+// ----------- added by me ---------
+
+// couldn't make it to the right folder for import
+// @import "custom.scss";
+
+$link-color: red;
+
+code.language-plaintext.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+};
+
+code.language-bash.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+};
+
+@media(min-width: 48em) {
+  html {
+      font-size:14px
+  }
+};
+
+@media(min-width: 64em) {
+  html {
+      font-size:16px
+  }
+};
+
+@media(min-width: 80em) {
+  html {
+      font-size:16px
+  }
+};
+
+
+// ----------- ORIGINAL below ---------
 
 @charset "utf-8";
 
