--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -3,8 +3,11 @@
 search: false
 ---
 
-// ----------- added by me ---------
+@charset "utf-8";
 
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+
+// from https://github.com/mmistakes/minimal-mistakes/discussions/1352#discussioncomment-2074482
 
 /* system typefaces */
 $serif: Lora, Georgia, Times, serif !default;
@@ -45,42 +48,6 @@ $h-size-4: 1.0625em !default;
 $h-size-5: 1.03125em !default;
 $h-size-6: 1em !default;
 
-// couldn't make it to the right folder for import
-// @import "custom.scss";
-
-// $link-color: red;
-
-code.language-plaintext.highlighter-rouge {
-	color: #ffffff;
-	background-color: #0066FF;
-	padding-top: 1px;
-	padding-right: 3px;
-	padding-bottom: 1px;
-	padding-left: 3px;
-	border-radius: 5px;
-	font-size: 14px;
-	font-weight: normal;
-	font-family: "Lucida Console", Monaco, monospace;
-};
-
-code.language-bash.highlighter-rouge {
-	color: #ffffff;
-	background-color: #0066FF;
-	padding-top: 1px;
-	padding-right: 3px;
-	padding-bottom: 1px;
-	padding-left: 3px;
-	border-radius: 5px;
-	font-size: 14px;
-	font-weight: normal;
-	font-family: "Lucida Console", Monaco, monospace;
-};
-
-// ----------- ORIGINAL below ---------
-
-@charset "utf-8";
-
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
 html {
@@ -98,5 +65,34 @@ html {
       font-size: 20px; // change to whatever
     }
   }
+
+
+// added by me
+
+// code.language-plaintext.highlighter-rouge {
+// 	color: #ffffff;
+// 	background-color: #0066FF;
+// 	padding-top: 1px;
+// 	padding-right: 3px;
+// 	padding-bottom: 1px;
+// 	padding-left: 3px;
+// 	border-radius: 5px;
+// 	font-size: 14px;
+// 	font-weight: normal;
+// 	font-family: "Lucida Console", Monaco, monospace;
+// };
+
+// code.language-bash.highlighter-rouge {
+// 	color: #ffffff;
+// 	background-color: #0066FF;
+// 	padding-top: 1px;
+// 	padding-right: 3px;
+// 	padding-bottom: 1px;
+// 	padding-left: 3px;
+// 	border-radius: 5px;
+// 	font-size: 14px;
+// 	font-weight: normal;
+// 	font-family: "Lucida Console", Monaco, monospace;
+// };
 
 
