--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -9,26 +9,26 @@ search: false
 
 // from https://github.com/mmistakes/minimal-mistakes/discussions/1352#discussioncomment-2074482
 
-/* system typefaces */
-$serif: Lora, Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
-  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
-$monospace: Monaco, Consolas, "Lucida Console", monospace !default;
+// /* system typefaces */
+// $serif: Lora, Georgia, Times, serif !default;
+// $sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+//   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+// $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
-/* sans serif typefaces */
-$sans-serif-narrow: $sans-serif !default;
-$helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
+// /* sans serif typefaces */
+// $sans-serif-narrow: $sans-serif !default;
+// $helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
 
-/* serif typefaces */
-$georgia: Georgia, serif !default;
-$times: Times, serif !default;
-$bodoni: "Bodoni MT", serif !default;
-$calisto: "Calisto MT", serif !default;
-$garamond: Garamond, serif !default;
+// /* serif typefaces */
+// $georgia: Georgia, serif !default;
+// $times: Times, serif !default;
+// $bodoni: "Bodoni MT", serif !default;
+// $calisto: "Calisto MT", serif !default;
+// $garamond: Garamond, serif !default;
 
-$global-font-family           : $serif !default;
-$header-font-family           : $sans-serif !default;
-$caption-font-family          : $serif !default;
+// $global-font-family           : $serif !default;
+// $header-font-family           : $sans-serif !default;
+// $caption-font-family          : $serif !default;
 
 /* type scale */
 $type-size-1: 2.441em !default;
