--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -30,87 +30,87 @@ search: false
 // $header-font-family           : $sans-serif !default;
 // $caption-font-family          : $serif !default;
 
-// /* type scale */
-// $type-size-1: 2.441em !default;
-// $type-size-2: 1.953em !default;
-// $type-size-3: 1.563em !default;
-// $type-size-4: 1.25em !default;
-// $type-size-5: 1.1em !default;
-// $type-size-6: 0.8em !default;
-// $type-size-7: 0.8em !default;
-// $type-size-8: 0.625em !default;
+/* type scale */
+$type-size-1: 2.441em !default;
+$type-size-2: 1.953em !default;
+$type-size-3: 1.563em !default;
+$type-size-4: 0.8em !default;
+$type-size-5: 0.8em !default;
+$type-size-6: 0.8em !default;
+$type-size-7: 0.8em !default;
+$type-size-8: 0.625em !default;
 
-// /* headline scale */
-// $h-size-1: 1.563em !default;
-// $h-size-2: 1.25em !default;
-// $h-size-3: 1.125em !default;
-// $h-size-4: 1.0625em !default;
-// $h-size-5: 1.03125em !default;
-// $h-size-6: 1em !default;
+/* headline scale */
+$h-size-1: 1.563em !default;
+$h-size-2: 1.25em !default;
+$h-size-3: 1.125em !default;
+$h-size-4: 0.8em !default;
+$h-size-5: 0.8em !default;
+$h-size-6: 0.8em !default;
 
 @import "minimal-mistakes"; // main partials
 
-html {
-    font-size: 12px; // change to whatever
+// html {
+//     font-size: 12px; // change to whatever
   
-    @include breakpoint($medium) {
-      font-size: 14px; // change to whatever
-    }
+//     @include breakpoint($medium) {
+//       font-size: 14px; // change to whatever
+//     }
   
-    @include breakpoint($large) {
-      font-size: 16px; // change to whatever
-    }
+//     @include breakpoint($large) {
+//       font-size: 16px; // change to whatever
+//     }
   
-    @include breakpoint($x-large) {
-      font-size: 18px; // change to whatever
-    }
-  }
+//     @include breakpoint($x-large) {
+//       font-size: 18px; // change to whatever
+//     }
+//   }
 
 
-@media(min-width: 48em) {
-  html {
-      font-size:12px
-  }
-};
-
-@media(min-width: 64em) {
-  html {
-      font-size:14px
-  }
-};
-
-@media(min-width: 80em) {
-  html {
-      font-size:16px
-  }
-};
-
-// added by me
-
-// code.language-plaintext.highlighter-rouge {
-// 	color: #ffffff;
-// 	background-color: #0066FF;
-// 	padding-top: 1px;
-// 	padding-right: 3px;
-// 	padding-bottom: 1px;
-// 	padding-left: 3px;
-// 	border-radius: 5px;
-// 	font-size: 14px;
-// 	font-weight: normal;
-// 	font-family: "Lucida Console", Monaco, monospace;
+// @media(min-width: 48em) {
+//   html {
+//       font-size:12px
+//   }
 // };
 
-// code.language-bash.highlighter-rouge {
-// 	color: #ffffff;
-// 	background-color: #0066FF;
-// 	padding-top: 1px;
-// 	padding-right: 3px;
-// 	padding-bottom: 1px;
-// 	padding-left: 3px;
-// 	border-radius: 5px;
-// 	font-size: 14px;
-// 	font-weight: normal;
-// 	font-family: "Lucida Console", Monaco, monospace;
+// @media(min-width: 64em) {
+//   html {
+//       font-size:14px
+//   }
 // };
+
+// @media(min-width: 80em) {
+//   html {
+//       font-size:16px
+//   }
+// };
+
+added by me
+
+code.language-plaintext.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	// font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+};
+
+code.language-bash.highlighter-rouge {
+	color: #ffffff;
+	background-color: #0066FF;
+	padding-top: 1px;
+	padding-right: 3px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+	border-radius: 5px;
+	// font-size: 14px;
+	font-weight: normal;
+	font-family: "Lucida Console", Monaco, monospace;
+};
 
 
