--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -6,86 +6,27 @@ search: false
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-
-// from https://github.com/mmistakes/minimal-mistakes/discussions/1352#discussioncomment-2074482
-
-// /* system typefaces */
-// $serif: Lora, Georgia, Times, serif !default;
-// $sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
-//   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
-// $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
-
-// /* sans serif typefaces */
-// $sans-serif-narrow: $sans-serif !default;
-// $helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
-
-// /* serif typefaces */
-// $georgia: Georgia, serif !default;
-// $times: Times, serif !default;
-// $bodoni: "Bodoni MT", serif !default;
-// $calisto: "Calisto MT", serif !default;
-// $garamond: Garamond, serif !default;
-
-// $global-font-family           : $serif !default;
-// $header-font-family           : $sans-serif !default;
-// $caption-font-family          : $serif !default;
-
-/* type scale */
-$type-size-1: 2.441em !default;
-$type-size-2: 1.953em !default;
-$type-size-3: 1.563em !default;
-$type-size-4: 0.8em !default;
-$type-size-5: 0.8em !default;
-$type-size-6: 0.8em !default;
-$type-size-7: 0.8em !default;
-$type-size-8: 0.625em !default;
-
-/* headline scale */
-$h-size-1: 1.563em !default;
-$h-size-2: 1.25em !default;
-$h-size-3: 1.125em !default;
-$h-size-4: 0.8em !default;
-$h-size-5: 0.8em !default;
-$h-size-6: 0.8em !default;
-
 @import "minimal-mistakes"; // main partials
 
-// html {
-//     font-size: 12px; // change to whatever
-  
-//     @include breakpoint($medium) {
-//       font-size: 14px; // change to whatever
-//     }
-  
-//     @include breakpoint($large) {
-//       font-size: 16px; // change to whatever
-//     }
-  
-//     @include breakpoint($x-large) {
-//       font-size: 18px; // change to whatever
-//     }
-//   }
+// from https://github.com/mmistakes/minimal-mistakes/discussions/1219#discussioncomment-172827
 
+html {
+  font-size: 12px; // change to whatever
 
-// @media(min-width: 48em) {
-//   html {
-//       font-size:12px
-//   }
-// };
+  @include breakpoint($medium) {
+    font-size: 14px; // change to whatever
+  }
 
-// @media(min-width: 64em) {
-//   html {
-//       font-size:14px
-//   }
-// };
+  @include breakpoint($large) {
+    font-size: 16px; // change to whatever
+  }
 
-// @media(min-width: 80em) {
-//   html {
-//       font-size:16px
-//   }
-// };
+  @include breakpoint($x-large) {
+    font-size: 18px; // change to whatever
+  }
+}
 
-added by me
+// added by me
 
 code.language-plaintext.highlighter-rouge {
 	color: #ffffff;
