--- a/docs/timeline/styles.css
+++ b/docs/timeline/styles.css
@@ -1,15 +1,3 @@
-.intro {
-    padding: 20px;
-    text-align: center;
-}
-
-.intro-image {
-    margin-top: 20px;
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -53,6 +41,15 @@ body {
 .intro {
     padding: 20px;
     text-align: center;
+    width: 80%;
+}
+
+.intro-image {
+    margin-top: 20px;
+    width: 80%;
+    max-width: 800px;
+    height: auto;
+    border-radius: 10px;
 }
 
 .timeline-container {
@@ -60,9 +57,6 @@ body {
     padding: 20px;
     background-color: #282828;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-height: 70vh;
-    overflow-y: auto;
-    position: relative;
 }
 
 .light-mode .timeline-container {
@@ -133,8 +127,7 @@ body {
     padding: 10px;
     text-align: center;
     background-color: #333;
-    position: fixed;
-    bottom: 0;
+    position: relative;
 }
 
 .footer a {
